# ad-dev-ws

./: .gitignore  .gitmodules  README.md
apps/arduino/sensor_arduino/: sensor_arduino.ino
apps/cam_test/src/: cam_main.cpp
apps/raspberrypi/camera/: CMakeLists.txt
apps/raspberrypi/cpp/: CMakeLists.txt
apps/raspberrypi/cpp/src/: a.out  main.cpp
apps/raspberrypi/infrared_sensor/: main.py
apps/raspberrypi/infrared_sensor/cpp/: CMakeLists.txt  build.sh
apps/raspberrypi/infrared_sensor/cpp/src/: infrared_sensor.cpp
apps/raspberrypi/infrared_sensor/python/: infrared_sensor.py  main.py
apps/raspberrypi/install/: local_setup.sh  setup.sh
apps/raspberrypi/install/infrared_sensor/lib/infrared_sensor/: infrared_publisher  infrared_subscriber
apps/raspberrypi/install/infrared_sensor/share/infrared_sensor/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
apps/raspberrypi/log/: latest_build
apps/raspberrypi/python/: main.py
apps/raspberrypi/ros2_ws/src/infrared_sensor/infrared_sensor/: infrared_publisher.py
apps/raspberrypi/ros2_ws/src/infrared_sensor/launch/: infrared_sensor_launch.py
apps/raspberrypi/src/infrared_sensor/: setup.cfg  setup.py
lib/mqyt/: LICENSE  Publisher.py  README.md  Subscriber.py  mqtt_creator.js  setup.py
lib/mqyt/mqyt/: Publisher.py  __init__.py
lib/mqyt/mqyt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: pip_vm_on.sh
